--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -9,12 +9,31 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #333;
+  background-color: #124733;
   transition: width 0.2s ease-in-out;
 }
 
 .underline-left-to-right:hover::before {
   width: 100%;
+}
+
+.underline-left-to-right-inverted {
+  position: relative;
+}
+
+.underline-left-to-right-inverted::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #124733;
+  transition: width 0.2s ease-in-out;
+}
+
+.underline-left-to-right-inverted:hover::before {
+  width: 0%;
 }
 
 .navbar-centered {
